--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
+    "morgan": "^1.10.0",
     "short-uuid": "^4.2.0",
     "socket.io": "^4.5.1"
   },
